[project]
name = "supnet"
version = "0.0.1"
description = "Calculate spanning supernets in Python for independent integration testing purposes"
authors = [{ name = "Jake Ireland", email = "jakewilliami@icloud.com" }]
requires-python = ">= 3.11, <4"
dependencies = [
    "argparse==1.4.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pip-audit>=2.9.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[project.scripts]
supnet = "cli:main"

# Adapted from:
#   https://github.com/scottzach1/Python-Injection-Framework/blob/ab4c1780/pyproject.toml

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]
ignore = [
    # "B008",  # docs.astral.sh/ruff/rules/function-call-in-default-argument/
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports
